# snake

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  buildrun.sh  cmake_install.cmake  git.sh  main  main.cpp  model.cpp  output  run.sh  test.cpp
cache1/: main.cpp
include/: UI.h  board.h  food.h  snake.h
release/: snake
src/: UI.cpp  board.cpp  food.cpp  main.cpp  snake.cpp
